# libcamera-test

./: .gitignore  CMakeLists.txt  README.md
lib/libcamera/: control_ids.h  formats.h  property_ids.h
lib/libcamera/ipa/: ipu3.mojom-module  ipu3_ipa_interface.h  ipu3_ipa_proxy.h  ipu3_ipa_serializer.h  raspberrypi.mojom-module  raspberrypi_ipa_interface.h  raspberrypi_ipa_proxy.h  raspberrypi_ipa_serializer.h  rkisp1.mojom-module  rkisp1_ipa_interface.h  rkisp1_ipa_proxy.h  rkisp1_ipa_serializer.h  vimc.mojom-module  vimc_ipa_interface.h  vimc_ipa_proxy.h
src/: eventloop.cpp  eventloop.h  main.cpp  utils.h
